feat: Complete Eyes MCP Server implementation
- Add comprehensive automated testing framework
- Implement unit test generation with Vitest
- Add E2E testing with Playwright browser automation
- Include visual regression testing with pixel comparison
- Add OCR text extraction with multi-language support
- Implement HTML report generation with embedded screenshots
- Add retry mechanism and performance tracking
- Include optional VLM integration with Ollama
- Add dropdown/select, hover, and scroll actions
- Fix OCR assertion processing and improve error handling
- Add automatic baseline generation for visual tests
- Include comprehensive documentation and examples
- Add GitHub Actions CI/CD workflow
- Configure for Claude Desktop and Claude Code integration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,14 @@ jobs:
     - name: Install dependencies
       run: pnpm install
     
+    - name: Install Playwright browsers
+      run: npx playwright install chromium
+    
     - name: Build
       run: pnpm build
     
     - name: Run tests
-      run: pnpm test --run
+      run: pnpm test
     
     - name: Type check
       run: npx tsc --noEmit
